Fixed Contact Footer on pc & fixed gap on mobile for the home page

--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,6 @@ h2 {
     position: relative;
     color: white;
     font-weight: 600;
-    gap: 10px;
 }
 
 h3 {
